--- a/.github/workflows /deploy.yml
+++ b/.github/workflows /deploy.yml
@@ -1,4 +1,4 @@
-name: 🚀 Deploy to Hostinger FTP
+name: 🚀 Auto Deploy to Hostinger
 
 on:
   push:
@@ -6,18 +6,23 @@ on:
       - main
 
 jobs:
-  ftp-deploy:
-    name: Upload via FTP
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: 📥 Checkout Code
+      - name: 📥 Checkout code
         uses: actions/checkout@v3
 
-      - name: 🏗️ Build Vite Project
-        run: |
-          npm install
-          npm run build
+      - name: 🧰 Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 📦 Install dependencies
+        run: npm install
+
+      - name: 🏗️ Build project
+        run: npm run build
 
       - name: 🚀 FTP Deploy
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
