--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,4 @@ jobs:
           password: ${{ secrets.FTP_PASSWORD }}
           port: 21
           local-dir: ./dist              # your project root
-          server-dir: /public_html/brajesh4
+          server-dir: /public_html/brajesh4/
