--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,15 +3,26 @@ name: Deploy Portfolio to Subdomain
 on:
   push:
     branches:
-      - main  # deploys when main branch is updated
+      - main
 
 jobs:
-  ftp-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 📥 Checkout code
         uses: actions/checkout@v3
+
+      - name: 🧰 Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 📦 Install dependencies
+        run: npm install
+
+      - name: 🏗️ Build project
+        run: npm run build
 
       - name: FTP Upload
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
