--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
           
 
       - name: 📦 Install dependencies
-        run: npm install
+        run: npm install --force
 
       - name: 🏗️ Build project
         run: npm run build
