--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,8 +15,7 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-        with:
-          node-version: '19'  # Use your Node.js version
+         # Use your Node.js version
 
       - name: Install dependencies
         run: npm install
