--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,9 @@ jobs:
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
-         # Use your Node.js version
+        with: 
+              node-version: '18'
+# Use your Node.js version
 
       - name: Install dependencies
         run: npm install
